--- a/src/sass/components/_bootstrap3LeftBehind.scss
+++ b/src/sass/components/_bootstrap3LeftBehind.scss
@@ -95,7 +95,7 @@ a {
   background-color: transparent;
 }
 a {
-  color: #00749e;
+  color: #4371cc;
   text-decoration: none;
 }
 
